# n42-node

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  run_poa_network.ps1  run_poa_network.sh  test_fork_scenario.ps1  test_network_partition.ps1  test_poa_eth66.ps1  test_poa_eth66.sh  test_sync_node.ps1  test_sync_node.sh
docs/: BEACON_ARCHITECTURE.md  BEACON_REORG_PLAN.md  BLOCK_PRODUCTION_FLOW.md  POA_ETH66_BLOCK_PROPAGATION.md  README.md  REORG_MECHANISM.md  TEST_SCRIPTS.md
src/: lib.rs  main.rs
src/consensus/: block_tree.rs  config.rs  fork_choice.rs  mod.rs  reorg.rs  state.rs  state_transition.rs  traits.rs  unified.rs  validator.rs  worker.rs
src/consensus/clique/: clique.rs  database.rs  error.rs  mod.rs  snapshot.rs
src/engine/: mod.rs  types.rs  validator.rs
src/evm/: config.rs  mod.rs
src/merkle_db/: error.rs  mod.rs  tree.rs  utils.rs
src/miner/: attributes.rs  config.rs  error.rs  mod.rs  sealer.rs  worker.rs
src/mobile_sdk/: blst_utils.rs  c_ffi.rs  deposit_exit.rs  jni.rs  mod.rs
src/network/: beacon_messages.rs  beacon_protocol.rs  mod.rs  primitives.rs
src/node/: components.rs  mod.rs  payload.rs  primitives.rs  types.rs
src/pos/: activation_queue.rs  attestation_duty.rs  beacon.rs  beacon_committee.rs  committee_cache.rs  mod.rs  safe_arith.rs  shuffle_list.rs  validator.rs
src/primitives/: beacon.rs  mod.rs  unified.rs
src/stages/: beacon_blocks.rs  mod.rs
src/stages/downloader/: client.rs  downloader.rs  mod.rs
src/storage/: memory.rs  mod.rs  traits.rs
src/validation/: beacon.rs  cross.rs  execution.rs  mod.rs
